tests/error/comprehension_errors/pattern_override2.err
Error: Drop violation (at $FILE:13:18)
   | 
11 | @guppy(module)
12 | def foo(qs: list[qubit] @owned, xs: list[int]) -> list[int]:
13 |     return [q for q in qs for q in xs]
   |                   ^ Variable `q` with non-droppable type `qubit` is leaked

Guppy compilation failed due to 1 previous error
